third_party/rust/chromium_crates_io/vendor/parity-scale-codec-v3/tests/max_encoded_len_ui/not_mel.rs
use parity_scale_codec::{Encode, MaxEncodedLen};

#[derive(Encode)]
struct NotMel;

#[derive(Encode, MaxEncodedLen)]
struct Generic<T> {
	t: T,
}

fn main() {
	let _ = Generic::<NotMel>::max_encoded_len();
}
